err/siim2-server.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Caliope_Odisea-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/SIIM2_Server-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/cid'...
Compiling './lib/python3.5/site-packages/cid/caliope_server.py'...
***   File "./lib/python3.5/site-packages/cid/caliope_server.py", line 84
    print 'caliope_server.py -c <configfile>'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cid/model'...
Listing './lib/python3.5/site-packages/cid/modules'...
Listing './lib/python3.5/site-packages/cid/modules/core'...
Listing './lib/python3.5/site-packages/cid/modules/core/dispatcher'...
Compiling './lib/python3.5/site-packages/cid/modules/core/dispatcher/router.py'...
***   File "./lib/python3.5/site-packages/cid/modules/core/dispatcher/router.py", line 117
    print "log: %s" % (args,)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cid/modules/core/file_uploader'...
Listing './lib/python3.5/site-packages/cid/modules/core/jsonrpc'...
Listing './lib/python3.5/site-packages/cid/modules/core/module_manager'...
Listing './lib/python3.5/site-packages/cid/modules/core/server_notifications'...
Listing './lib/python3.5/site-packages/cid/utils'...
Compiling './lib/python3.5/site-packages/cid/utils/fileUtils.py'...
***   File "./lib/python3.5/site-packages/cid/utils/fileUtils.py", line 52
    print "Error: can\'t find file or read data"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/neomodel'...
Listing './lib/python3.5/site-packages/neomodel/contrib'...
Listing './lib/python3.5/site-packages/neomodel-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/odisea'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py2neo'...
Listing './lib/python3.5/site-packages/py2neo-1.5.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mideast'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2013b0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/TestCaliopeStorage.py'...
***   File "./lib/python3.5/site-packages/test/TestCaliopeStorage.py", line 38
    print "Test#1"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/test/__init__.py'...
Listing './share'...
Listing './share/python-wheels'...
